compiler/testData/diagnostics/tests/Redeclarations.jet
// FILE: f.kt
package redeclarations
  object <!REDECLARATION, REDECLARATION!>A<!> {
    val x : Int = 0

    val A = 1
  }

  class <!REDECLARATION!>A<!> {}

  val <!REDECLARATION!>A<!> = 1

// FILE: f.kt
  package redeclarations.<!REDECLARATION, REDECLARATION!>A<!>
    class A {}